--- a/curriculo.html
+++ b/curriculo.html
@@ -11,6 +11,7 @@
         <nav class="cabecalho__menu">
             <a href="index.html" class="cabecalho__menu__link">Home</a>
             <a href="about.html" class="cabecalho__menu__link">Sobre Mim</a>
+            <a href="curriculo.html" class="cabecalho__menu__link">Currículo</a>
         </nav>
     </header>
     <main class="presentation">
