--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <nav class="cabecalho__menu">
             <a href="index.html" class="cabecalho__menu__link">Home</a>
             <a href="about.html" class="cabecalho__menu__link">Sobre Mim</a>
+            <a href="curriculo.html" class="cabecalho__menu__link">Currículo</a>
         </nav>
     </header>
 
@@ -18,10 +19,13 @@
         <section class="presentation__content">
             <h1 class="presentation__content__title">Sobre Mim</h1>
             <p class="presentation__content__text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, mauris auctor ultrices ultricies, justo nisl tincidunt nunc, ac tincidunt neque mauris id justo. Sed auctor, nisl in consectetur tincidunt, urna nunc aliquam justo, ac tincidunt nisl mauris nec nunc. Nullam euismod, nunc ac ultricies aliquam, urna arcu tincidunt nunc, id consectetur nisl mauris nec nunc. Sed auctor, nisl in consectetur tincidunt, urna nunc aliquam justo, ac tincidunt nisl mauris nec nunc.
+                Estudante da área de tecnologia, iniciei a carreira na área de manutenção e implantação de computadores, notebooks e impressoras como todo bom e velho entusiasta. Com uma experiência de cerca de três anos na área, senti que faltava algo ainda então comecei a me dedicar nos estudos e desenvolvi em parceria com um clube local um pequeno aplicativo de controle de mensalidades do clube, onde era feito o controle e emitido relatórios. Mas tudo mudou em 2019 onde a baixa demanda no local acabou por encerrar as atividades no estabelecimento.
             </p>
             <p class="presentation__content__text">
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; In hac habitasse platea dictumst. Nullam auctor, nisl in consectetur tincidunt, urna nunc aliquam justo, ac tincidunt nisl mauris nec nunc. Sed auctor, nisl in consectetur tincidunt, urna nunc aliquam justo, ac tincidunt nisl mauris nec nunc. Sed auctor, nisl in consectetur tincidunt, urna nunc aliquam justo, ac tincidunt nisl mauris nec nunc.
+                Em agosto de 2019 dei um grande passo na minha carreira profissional, virei a chave, mudei o mindset e segui carreira na área das telecomunicações o que no próximo ano acabaria recebendo o status de guerreiro em meio a pandemia onde de segunda a segunda corríamos pelas cidades da região para manter os clientes que já estávam fora de suas rotinas conectados com o resto do mundo. O grande problema da telecomunicação é que depois que você entra fica cada vez mais difícil de sair, alguns anos passaram e em 2021 assumi como supervisor de telecomunicações em um dos maiores provedores do Brasil onde coordeno cerca de 15 técnicos sempre repassando o conhecimento adquirido e aprendendo cada vez mais com eles e com a empresa.
+            </p>
+            <p class="presentation__content__text">
+                Infelizmente, com a pandemia tive que dedicar 100% do meu tempo ao trabalho, tendo que abandonar meus estudos e focar cada vez mais no trabalho. Foi aí que conheci a Alura, onde depois de muita análise acabei me matriculando e estou mantendo o foco para deixar o conhecimento na área do desenvolvimento maior, podendo assim quem sabe iniciar em uma software house ou executar trabalhos mais complexos para empresas!
             </p>
         </section>
         <img class="presentation__image" src="./assets/Imagem.png" alt="Sobre mim">
