--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Andrew Rosseti.</p>
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/andrew-rosseti/">Andrew Rosseti.</a></p>
     </footer>
 </body>
 </html>
