--- a/curriculo.html
+++ b/curriculo.html
@@ -31,15 +31,17 @@
             <h2 class="presentation__content__title">Estudos</h2>
             <div class="presentation__content__text">
             <ul class="presentation__content__text">
-                <li>Curso HTML5 e CSS3 - Alura Cursos <a href="linkdocertificado">com certificado</a> </li>
-                
+                <li>HTML e CSS: Classes, Posicionamento e Flexbox <a href="https://cursos.alura.com.br/certificate/af804bbb-71b0-4e73-a920-a29526a5cb09">com certificado</a> </li>
+                <li>HTML e CSS: Marcadores e Variáveis CSS <a href="https://cursos.alura.com.br/certificate/0d015f16-fa22-44b9-b5e3-699de78e4fff">com certificado</a></li>
+                <li>HTML e CSS: Trabalhando com Responsividade <a href="https://cursos.alura.com.br/certificate/1fa56032-a38c-423d-9290-b5f3d2b06879">com certificado</a></li>
+                <li>HTML e CSS: Ambiente de Desenvolvimento, estruturação de arquivos e tags <a href="https://cursos.alura.com.br/certificate/a21a6939-9e78-47a2-9fc3-838470de1cb6">com certificado</a></li>
             </ul>
             </div>    
         </section>
         <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main> 
     <footer class="rodape">
-        <p>Desenvolvido por Andrew Rosseti.</p>
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/andrew-rosseti/">Andrew Rosseti.</a></p>
     </footer>
 </body>
 </html>
