--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img class="presentation__image" src="Imagem.png" alt="Sou Andrew">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Andrew Rosseti.</p>
+        <p>Desenvolvido por <a href="https://www.linkedin.com/in/andrew-rosseti/">Andrew Rosseti.</a></p>
     </footer>
 </body>
 </html>
