--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
             </div>
         </section>
-        <img class="presentation__image" src="Imagem.png" alt="Sou Andrew">
+        <img class="presentation__image" src="./assets/Andrew.jpeg" width="490px" alt="Sou Andrew">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/andrew-rosseti/" target="_blank">Andrew Rosseti.</a></p>
