modified about curriculum and index to insert a new pohotograph

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 Infelizmente, com a pandemia tive que dedicar 100% do meu tempo ao trabalho, tendo que abandonar meus estudos e focar cada vez mais no trabalho. Foi aí que conheci a Alura, onde depois de muita análise acabei me matriculando e estou mantendo o foco para deixar o conhecimento na área do desenvolvimento maior, podendo assim quem sabe iniciar em uma software house ou executar trabalhos mais complexos para empresas!
             </p>
         </section>
-        <img class="presentation__image" src="./assets/Imagem.png" alt="Sobre mim">
+        <img class="presentation__image" src="./assets/Andrew.jpeg" width="490px" alt="Sou Andrew">
     </main>
 
     <footer class="rodape">
