--- a/curriculo.html
+++ b/curriculo.html
@@ -38,7 +38,7 @@
             </ul>
             </div>    
         </section>
-        <img class="presentation__image" src="./assets/Andrew.jpeg" width="490px" alt="Sou Andrew">
+        <!--img class="presentation__image" src="./assets/Andrew.jpeg" width="490px" alt="Sou Andrew"-->
     </main> 
     <footer class="rodape">
         <p>Desenvolvido por <a href="https://www.linkedin.com/in/andrew-rosseti/">Andrew Rosseti.</a></p>
